--- a/visual c++/命名规则.md
+++ b/visual c++/命名规则.md
@@ -1,9 +1,47 @@
 # visual c++ 命名规范
 
-## 三种常用命名法
+[TOC]
+
+## 常用命名法
 
 ### 小驼峰
 
+>第一个单词字母小写，后面单词首字母大写
+
 ### 大驼峰
 
-### 帕斯卡
+>每个单词第一个字母都大写
+
+### 匈牙利命名
+
+>开头字母用变量类型的所写，其余部分用英文或英文的缩写，单词第一个字母大写（C/c++ 建议使用）
+>在变量和函数名中加入前缀以增进人们对程序的理解(函数内部临时变量可不遵循)
+>防止某一软件库中的一些标识符和其它软件库中的冲突，可以为各种标识符加上能反映软件性质的前缀。例如三维图形标准OpenGL的所有库函数均以gl开头，所有常量（或宏定义）均以GL开头。
+
+#### 常用类型缩写
+
+- pointer p
+- function fn
+- void v
+- handle h
+- long l
+- bool b
+- float f
+- dword dw
+- 字符串  sz
+- short/int n
+- byte by
+- char c
+- word w
+- unsinged u
+
+#### 属性前缀
+
+- 全局变量 g_
+- 常量 c_
+- 类成员变量 m_
+- 静态变量 s_
+
+### 下划线
+
+>单词用_连接，单词小写
