--- a/stm32/环境配置.md
+++ b/stm32/环境配置.md
@@ -2,6 +2,8 @@
 
 [TOC]
 
+> stm32参考文档[对应的技术参考文档]，[数据手册], [固件库使用说明]
+
 ## MDK-ARM5.10下载安装
 
 - [安装包](www.baidu.com)
@@ -32,12 +34,17 @@
 问题3：下载时st-link无法连接 Target DLL has been cancelled
 > keil安装路径下  ARM/STLINK/ST-LinkUpgrade.exe 升级stlink驱动。重新插上STLINK即可
 
+问题4：Pack Installer Reading one or more Pack description failed:
+> [keil官网解释](http://www.keil.com/support/docs/3646.htm)
+
 ## MDK5.1 HAL库
 
 ### 说明
 
 ## 嵌入式常用英文缩写
 
+- DFP : device family package
+- CMSIS : 微控制器软件接口标准
 - ARM : Advanced RISC Machine
 - AAPCS : ARM Architecture Process call standad
 - RISC : Reduced Instruction Set Computer
