--- a/stm32/环境配置.md
+++ b/stm32/环境配置.md
@@ -135,3 +135,31 @@
 - VFP : vector floating point
 - LDR  存贮器内容加载到寄存器
 - STR  寄存器内容加载到存贮器
+
+## 程序问题
+
+### hardfault 定位
+
+- 参考《Cortex-M3权威指南》
+- LR的值 
+  - 0xFFFFFFF1 返回handler模式
+  - 0xFFFFFFF9 返回线程模式，并使用主堆栈（SP=MSP）
+  - 0xFFFFFFFD 返回线程模式，并使用线程堆栈（SP=PSP）
+  - F9 FD可以直接在call stack window中 查看caller
+  - F1 需要查看sp寄存器的值
+  > sp地址的值依次位 R0~R3 R12 LR PC PSR每个值均为4字节
+
+- __CC_ARM  __ICCARM__ __GNUC__
+  - __CC_ARM 对应ARM RealView(armcc) keil默认工具链
+  - ——ICCARM__ 对应IAR EWARM(iccarm)
+  - ——GNUC__ 对应 GNU compiler collection(gcc)
+  > 具体参考core_cm3.h中宏定义
+
+## HEX文件
+
+### hex文件大小
+
+- Code 程序代码
+- RO-data 程序定义常量大小
+- RW-data 程序定义已初始化全局变量
+- ZI-data 程序定义未初始化全局变量
